<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/loginMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.think360.cmg.view.acitivity.LoginActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="196dp"
                    android:layout_height="196dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:padding="16dp"
                    android:src="@drawable/logo" />

                <TextView
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_mobile_no" />


                <com.hbb20.CountryCodePicker

                    android:clickable="true"
                    app:ccp_clickable="true"
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <EditText
                    android:text="@string/swamy_think360_gmail_com"
                    android:id="@+id/etEmail"
                    style="@style/EditTextRoboto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:nextFocusForward="@+id/etPassword" />

                <TextView
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />


                <EditText
                    android:id="@+id/etPassword"
                    style="@style/EditTextRoboto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@string/_123456" />


                <!-- Password Re-enter Label -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_below="@+id/include"
                    android:layout_gravity="right"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="visible">


                    <RelativeLayout

                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="left|center_vertical"
                        android:gravity="left|center_vertical">

                        <CheckBox
                            android:id="@+id/switch_gprs"
                            style="@style/CustomSwitchButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:checked="false"
                            android:gravity="center_vertical"
                            app:buttonTint="@color/appYellow" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_toRightOf="@+id/switch_gprs"
                            android:checked="false"
                            android:gravity="center_vertical"
                            android:text="Remember me"
                            android:textColor="@color/appGray"
                            app:buttonTint="@color/appYellow" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvForgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:gravity="right|center_vertical"
                        android:text="Forgot Password ?"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/appGray" />

                </LinearLayout>

                <!-- Signup Button -->
                <TextView
                    android:id="@+id/btnSignIn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="7.5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:padding="10dp"
                    android:background="@drawable/rectanglefilled"
                    android:clickable="true"
                    android:elevation="3dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/white"
                     />


            </LinearLayout>

        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>
